Fixed horizontal scrolling on few pages.

--- a/styles/main.css
+++ b/styles/main.css
@@ -99,6 +99,10 @@ body{
 	margin-top:28px
 }
 
+.row{
+	margin-right:0px;
+}
+
 @media screen and (min-width:768px){
 	.footer,.header,.marketing{
 		padding-left:0;
